# leetcode-daily-discord-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  LOGGING_REFACTOR_PLAN.md  README.md  atcoder.py  bot.py  codeforces.py  config.toml.example  db_manager.py  discord_bot.py  docker-compose.yml  embedding_cli.py  leetcode.py  leetcode_daily.py  pyproject.toml  requirements.txt
cogs/: core_cog.py  interaction_handler_cog.py  schedule_manager_cog.py  similar_cog.py  slash_commands_cog.py
data/: cleanup_db_schema.sql  cleanup_runtime_db.py  init_db_schema.sql  migrate_embeddings.sql  migrate_problems_source.sql
docs/: leetcode_db_merge_plan.md
embeddings/: generator.py  rewriter.py  searcher.py  storage.py
issues/: 2026-01-05_21-50-04-codeforces-html-parse.csv  2026-01-08_04-24-02-daily-history-today.csv
llms/: __init__.py  base.py  gemini.py  templates.md  templates.py
plan/: 2026-01-05_18-23-54-codeforces-html-parse.md  2026-01-07_14-46-33-daily-history-today.md  2026-01-22_19-16-33-similar-parse-problem-source.md
tests/: README.md  test_atcoder.py  test_bootstrap_and_paths.py  test_codeforces.py  test_daily_history.py  test_daily_payload_reuse.py  test_database_schema_assets.py  test_history_dates.py  test_html_converter.py  test_html_to_text.py  test_interaction_handler.py  test_llm_cache_atcoder.py  test_monthly_fetch.py  test_random_command.py  test_schedule_manager_cog.py  test_similar_cog.py  test_similar_cog_search.py  test_similar_results.py  test_slash_problem_command.py  test_source_detector.py  (+3 more)
(+154 files in other folders)
