[project]
name = "leetcode-daily-discord-bot"
version = "1.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.13.3",
    "colorlog>=6.9.0",
    "curl-cffi>=0.7.0",
    "discord-py>=2.5.2",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "sqlite-vec>=0.1.6",
    "tenacity>=8.2.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=."
